# Module.Xml

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: autobuild.yml  build-linux.yml  build-windows.yml
CMake/: Configure.cmake
Test/: CMakeLists.txt  Test1.cpp
Xml/: Attribute.h  CMakeLists.txt  Declarations.h  File.cpp  File.h  Node.cpp  Node.h  Scanner.cpp  Scanner.h  SpecialChar.cpp  SpecialChar.h  Token.h  TypeFilter.cpp  TypeFilter.h  Writer.cpp  Writer.h  Xml.grm
